# Math

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  Collision.cpp  MATH_LIBRARY_ANALYSIS.md  MATRIX_OPTIMIZATION_NOTES.md  Math.natvis  MathTests.cpp  Matrix.cpp  Quaternion.cpp  README.md  Transforms.cpp
.github/: copilot-instructions.md
.github/.workflows/: build_and_test.yml
.github/workflows/: build_and_test.yml
inc/: 3DMath.h  GeometricPrimitives.h  Matrix.h  Quaternion.h  Transforms.h
test/: CMakeLists.txt  MathTests.cpp
